# route_snapper

./: .gitignore  CHANGES.md  Cargo.toml  README.md  dev.md  import.html  index.html  user_guide.md
.github/workflows/: demo.yml
debug-graph/: Cargo.toml
debug-graph/src/: main.rs
examples/: geojson-to-route-snapper  import.html  index.html  osm-to-route-snapper  osm-to-route-snapper-v2  route-snapper  route-snapper-js  serve_locally.sh
geojson-to-route-snapper/: Cargo.toml
geojson-to-route-snapper/pkg/: geojson_to_route_snapper.d.ts  geojson_to_route_snapper.js  geojson_to_route_snapper_bg.wasm  geojson_to_route_snapper_bg.wasm.d.ts  package.json
geojson-to-route-snapper/src/: lib.rs  main.rs
osm-to-route-snapper/: Cargo.toml
osm-to-route-snapper-v2/: Cargo.toml
osm-to-route-snapper-v2/src/: lib.rs  main.rs
osm-to-route-snapper/pkg/: osm_to_route_snapper.d.ts  osm_to_route_snapper.js  osm_to_route_snapper_bg.wasm  osm_to_route_snapper_bg.wasm.d.ts  package.json
osm-to-route-snapper/src/: lib.rs  main.rs
route-snapper/: Cargo.toml  README.md  lib.js
route-snapper-graph/: Cargo.toml
route-snapper-graph/src/: lib.rs
route-snapper-js/: Cargo.toml  lib.js
route-snapper-js/pkg/: package.json  route_snapper_js.js  route_snapper_js_bg.wasm  route_snapper_js_bg.wasm.d.ts
route-snapper-js/src/: lib.rs
route-snapper-ts/: package-lock.json  package.json  tsconfig.json
route-snapper-ts/src/: index.ts  split.ts
route-snapper/pkg/: README.md  lib.js  package.json  route_snapper.d.ts  route_snapper.js  route_snapper_bg.wasm  route_snapper_bg.wasm.d.ts
route-snapper/src/: lib.rs  tests.rs
