[package]
name = "geojson-to-route-snapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
geo = "0.27.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
route-snapper-graph = { path = "../route-snapper-graph" }
serde = { version = "1.0.188", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
