[package]
name = "osm-to-route-snapper-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.2", features = ["derive"] }
geom = { git = "https://github.com/a-b-street/abstreet" }
osmpbf = "0.3.1"
route-snapper-graph = { path = "../route-snapper-graph" }
