[package]
name = "route-snapper-graph"
version = "0.1.0"
edition = "2021"

[features]
default = []
osm2streets = ["dep:osm2streets"]

[dependencies]
geom = { git = "https://github.com/a-b-street/abstreet" }
osm2streets = { git = "https://github.com/a-b-street/osm2streets", optional = true }
serde = "1.0.123"
