[package]
name = "route-snapper-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
petgraph = "0.6.0"
route-snapper-graph = { path = "../route-snapper-graph" }
serde_json = "1.0.61"
wasm-bindgen = "0.2.70"
web-sys = { version = "0.3.6", features = ["console"] }
