[package]
name = "route-snapper"
version = "0.1.5"
edition = "2021"
description = "Draw routes in MapLibre snapped to a street network using client-side routing"
repository = "https://github.com/dabreegster/route_snapper"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
petgraph = "0.6.0"
route-snapper-graph = { path = "../route-snapper-graph" }
rstar = "0.9.3"
serde_json = "1.0.61"
wasm-bindgen = "0.2.70"
web-sys = { version = "0.3.6", features = ["console"] }
