[package]
name = "route-snapper"
version = "0.2.1"
edition = "2021"
description = "Draw routes in MapLibre snapped to a street network using client-side routing"
repository = "https://github.com/dabreegster/route_snapper"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
log = "0.4.20"
petgraph = "0.6.4"
route-snapper-graph = { path = "../route-snapper-graph" }
rstar = "0.11.0"
serde = "1.0.188"
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
